test/core/errors/subtypes_error/zs/simple_cyclic_dependency_error.zs
package simple_cyclic_dependency_error;

subtype X X; // cycle!
